@@ -26,6 +26,9 @@
  * \ingroup channel_drivers
  */
 
+#include <stdlib.h>
+#include <stdio.h>
+#include <sys/types.h>
 #include <sys/mman.h>
 #include <arpa/inet.h>
 #include <dirent.h>
@@ -36,14 +39,11 @@
 #include <sys/time.h>
 #include <sys/signal.h>
 #include <signal.h>
-#include <stdlib.h>
-#include <stdio.h>
 #include <string.h>
 #include <errno.h>
 #include <unistd.h>
 #include <netdb.h>
 #include <fcntl.h>
-#include <sys/types.h>
 #include <sys/stat.h>
 #include <regex.h>
 #ifdef IAX_TRUNKING
